<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- name category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_name" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />


        </LinearLayout>
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- price field -->
            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supply_quantity"
                android:inputType="number" />

        </RelativeLayout>
    </LinearLayout>


    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Supply field -->
            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supply_quantity"
                android:inputType="number" />

        </RelativeLayout>
    </LinearLayout>


    <!-- Supplier category -->
    <LinearLayout
        android:id="@+id/container_supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Supply field -->
            <EditText
                android:id="@+id/edit_product_supplier"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supply_quantity"
                android:inputType="text" />

        </RelativeLayout>
    </LinearLayout>

    <!-- supplier number category -->
    <LinearLayout
        android:id="@+id/container_supplier_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier_number" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Supply field -->
            <EditText
                android:id="@+id/edit_product_supplier_number"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supply_quantity"
                android:inputType="phone" />

        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/quantity_increase_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increase_button_text" />

    <Button
        android:id="@+id/quantity_decrease_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrease_button_text" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_supplier_button_text" />


</LinearLayout>
