...
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>
...
