...
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#A2AAB0" />
    </RelativeLayout>

    <!-- icon resource: https://icons8.com/icon/95779/plus-math -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/plus" />
...
